# Iec61850ToIEDScout

./: CMakeLists.txt  README.md
goose_publisher/: goose_publisher_example.c
goose_subscriber/: goose_subscriber_example.c
